tests/fail/backtrace/bad-backtrace-ptr.stderr
error: Undefined Behavior: null pointer is not a valid pointer for this operation
  --> $DIR/bad-backtrace-ptr.rs:LL:CC
   |
LL |         miri_resolve_frame(std::ptr::null_mut(), 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ null pointer is not a valid pointer for this operation
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/bad-backtrace-ptr.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

